# dbt-bigquery-core

./: .gitignore  Dockerfile  GETTING_STARTED.md  GETTING_STARTED_DATA_CONTRACTS.md  GETTING_STARTED_DATA_CONTRACTS_VISUAL_GUIDE.md  GETTING_STARTED_OBSERVABILITY.md  GETTING_STARTED_TESTING.md  GETTING_STARTED_WITH_DUCKDB.md  Makefile  README.md  ToDo.md  datacontract.yaml  how_to.txt  pyproject.toml  reproduction.md
.devcontainer/python-container/: devcontainer.json
data_contracts/: newsapi_mart.datacontract.yaml  newsapi_raw.datacontract.yaml
dbt-bigquery-core/: .user.yml  Makefile  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt-bigquery-core/data_contracts/: newsapi_articles.yaml
dbt-bigquery-core/macros/: duckdb__regexp_instr.sql
dbt-bigquery-core/models/mart/newsapi/: mart_newsapi__daily_articles.sql  mart_newsapi__daily_articles.yml  mart_newsapi__daily_trends.sql  mart_newsapi__daily_trends.yml
dbt-bigquery-core/models/staging/newsapi/: stg_newsapi__articles_de_de.yml  stg_newsapi__articles_us_en.sql  stg_newsapi__articles_us_en.yml
dbt-bigquery-core/models/staging/newsapi/raw/: _newsapi__sources.yml  src_newsapi__articles_de_de.sql  src_newsapi__articles_de_de.yml  src_newsapi__articles_us_en.sql  src_newsapi__articles_us_en.yml
dbt-bigquery-core/soda_testing/: config.yml
dbt-bigquery-core/tests/: mart_newsapi__daily_articles_unit_test.yml  test_articles_language_match_source.sql  test_int_articles_rowcount_matches_sources.sql  test_mart_dates_within_source_range.sql  test_no_duplicate_articles_across_languages.sql  test_published_at_not_future.sql
dbt-bigquery-core/tests/generic/: test_positive_value.sql
dlt-data-dumper/: Makefile  Pipfile  newsapi_pipeline.py  newsapi_pipeline_to_gcs.py  pyproject.toml
dlt-data-dumper/.dlt/: config.toml
