[tool.poetry]
name = "dbt-bigquery-core"
version = "0.1.0"
description = ""
authors = ["Eugen Koepplin <ekoepplin@gmx.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
duckdb = "1.1.1"
fire = "^0.5.0"
google-cloud-bigquery = ">=1.25.0,<3.0.0"
loguru = "^0.7.2"
google-auth = "^2.24.0"
newsapi =  "0.1.1"
newsapi-python = "0.2.7"
pydantic = "^2.7.4"
db-dtypes = "^1.1.1"
pyarrow = "17.0.0"
google-cloud-bigquery-storage = "2.26"
dbt-core = ">=1.3.0,<1.4.0"
dbt-bigquery = ">=1.3.0,<1.4.0"
dlt = {extras = ["bigquery"], version = "^1.8.0"}
soda-core-dbt = "^3.5.0"
soda-core-bigquery = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"