[project]
name = "dbt-bigquery-core"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.4",
    "fire>=0.5.0,<1.0.0",
    "google-cloud-bigquery>=3.0.0,<4.0.0",
    "loguru>=0.7.2,<1.0.0",
    "google-auth>=2.24.0,<3.0.0",
    "newsapi==0.1.1",
    "newsapi-python==0.2.7",
    "pydantic>=2.13.0,<3.0.0",
    "db-dtypes>=1.1.1,<2.0.0",
    "pyarrow>=24.0.0",
    "google-cloud-bigquery-storage>=2.39.0",
    "dbt-core>=1.11.0,<2.0.0",
    "dbt-bigquery>=1.11.0,<2.0.0",
    "dbt-duckdb>=1.10.1",
    "dlt[bigquery]>=1.28.0,<2.0.0",
    "soda-dbt",
    "soda-duckdb",
    "soda-bigquery",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.0,<1.0.0",
    "ipykernel>=6.29.0,<7.0.0",
    "datacontract-cli[duckdb]>=1.0.12,<2.0.0",
]

[[tool.uv.index]]
name = "soda"
url = "https://pypi.cloud.soda.io"

[tool.uv.sources]
soda-dbt = { index = "soda" }
soda-duckdb = { index = "soda" }
soda-bigquery = { index = "soda" }
